--- a/Dockerfile.franken
+++ b/Dockerfile.franken
@@ -1,68 +1,78 @@
-# ─────────────────────────────────────────────
-# Stage 1: Install Composer dependencies
-# ─────────────────────────────────────────────
-FROM composer:latest AS deps
+# =============================================================================
+# Stage 1: Composer dependencies
+# =============================================================================
+FROM composer:2 AS composer
 
 WORKDIR /app
 
-# Copy composer files dulu — layer caching supaya install cepet di rebuild
-COPY composer.json ./
+COPY composer.json composer.lock ./
 
 RUN composer install \
     --no-dev \
     --no-scripts \
+    --no-autoloader \
     --prefer-dist \
-    --no-interaction \
-    --no-autoloader
+    --no-interaction
 
-# Copy full source baru
 COPY . .
 
-# Optimize autoloader
-RUN composer dump-autoload \
-    --classmap-authoritative \
-    --no-dev
+RUN composer dump-autoload --optimize --no-dev
 
-# ─────────────────────────────────────────────
-# Stage 2: Production image
-# ─────────────────────────────────────────────
-FROM dunglas/frankenphp:latest
-
-# PHP extensions yang dibutuhkan Laravel
-RUN install-php-extensions \
-    pdo_mysql \
-    pdo_pgsql \
-    redis \
-    gmp \
-    intl \
-    zip \
-    bcmath
-
-# curl for HEALTHCHECK
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
+# =============================================================================
+# Stage 2: Frontend assets (skip if no frontend build needed)
+# =============================================================================
+FROM node:22-alpine AS frontend
 
 WORKDIR /app
 
-# Copy app dari stage 1
-COPY --from=deps /app .
+COPY package.json package-lock.json* ./
 
-# Caddyfile & entrypoint
-COPY Caddyfile /etc/caddy/Caddyfile
-COPY docker-entrypoint.sh /docker-entrypoint.sh
-RUN chmod +x /docker-entrypoint.sh
+RUN npm ci
 
+COPY . .
 
-# Writable directories Laravel
-RUN chown -R www-data:www-data \
-    /app/storage \
-    /app/bootstrap/cache
+RUN npm run build
 
-EXPOSE 80 443 443/udp
+# =============================================================================
+# Stage 3: Production image
+# =============================================================================
+FROM dunglas/frankenphp:latest AS production
 
-HEALTHCHECK --interval=30s --timeout=3s \
-    CMD curl -sf http://localhost/ > /dev/null || exit 1
+# Install PHP extensions commonly needed by Laravel
+RUN install-php-extensions \
+    pcntl \
+    pdo_mysql \
+    pdo_pgsql \
+    redis \
+    intl \
+    gd \
+    zip \
+    bcmath \
+    opcache
 
-ENTRYPOINT ["/docker-entrypoint.sh"]
-CMD ["frankenphp", "run"]
+# Set the server name (use :80 for HTTP-only, or your domain for auto HTTPS)
+ENV SERVER_NAME=:80
+ENV APP_ENV=production
+ENV APP_DEBUG=false
+
+WORKDIR /app
+
+# Copy application from build stages
+COPY --from=composer /app/vendor ./vendor
+COPY --from=frontend /app/public/build ./public/build
+COPY . .
+
+# Set permissions
+RUN chown -R www-data:www-data /app/storage /app/bootstrap/cache \
+    && chmod -R 775 /app/storage /app/bootstrap/cache
+
+# Laravel optimization
+RUN php artisan config:cache \
+    && php artisan route:cache \
+    && php artisan view:cache \
+    && php artisan event:cache
+
+EXPOSE 80 443
+
+HEALTHCHECK --interval=30s --timeout=5s --retries=3 \
+    CMD curl -f http://localhost/up || exit 1
