--- a/Dockerfile.franken
+++ b/Dockerfile.franken
@@ -5,7 +5,7 @@ FROM composer:2 AS composer
 
 WORKDIR /app
 
-COPY composer.json composer.lock ./
+COPY composer.json ./
 
 RUN composer install \
     --no-dev \
